--- a/pytorch_version/train.ipynb
+++ b/pytorch_version/train.ipynb
@@ -2,11 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse"
+    "import torch\n",
+    "import model\n",
+    "import loss\n",
+    "from torchvision import transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "from dataset import Dataset, infinite_loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATASET_PATH = \"123123121231\"\n",
+    "SIZE = 256\n",
+    "BATCH = 16\n",
+    "LEARNING_RATE = 1e-3\n",
+    "EPOCHS = 1e6\n",
+    "NUM_BASIS = 6\n",
+    "NOISE_DIM = 512\n",
+    "BASE_CHANNELS = 16\n",
+    "MAX_CHANNELS = 512\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
@@ -15,18 +38,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = argparse.ArgumentParser()\n",
-    "##### Determine dataset path here!!\n",
-    "parser.add_argument(\"path\", type=str, help=\"path to the dataset\")\n",
-    "parser.add_argument(\"--device\", type=str, default=\"cuda: 0\")\n",
-    "parser.add_argument(\"--size\", type=int, default=256, help=\"image size\")\n",
-    "parser.add_argument(\"--batch\", type=int, default=16, help=\"batch size\")\n",
-    "parser.add_argument(\"--lr\", type=float, default=1e-3, help=\"learning rate\")\n",
-    "parser.add_argument(\"--epochs\", type=int, default=1e6, help=\"train epochs\")\n",
-    "parser.add_argument(\"--num_basis\", type=int, default=6, help=\"subspace dimension for a generator layer\")\n",
-    "parser.add_argument(\"--noise_dim\", type=int, default=512, help=\"noise dimension for the input lay of generator\")\n",
-    "parser.add_argument(\"--base_channels\", type=int, default=16, help=\"number of base channels for generator/discriminator\")\n",
-    "parser.add_argument(\"--max_channels\", type=int, default=512, help=\"maximum number of channels for generator/discriminator\")\n"
+    "generator = model.Generator(\n",
+    "    size=SIZE,\n",
+    "    num_basis=NUM_BASIS,\n",
+    "    noise_dim=NOISE_DIM,\n",
+    "    base_channels=BASE_CHANNELS,\n",
+    "    max_channels=MAX_CHANNELS\n",
+    ").to(device)\n",
+    "\n",
+    "discriminator = model.Discriminator(\n",
+    "    size=SIZE, \n",
+    "    base_channels=BASE_CHANNELS,\n",
+    "    max_channels=MAX_CHANNELS,\n",
+    ").to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimizers\n",
+    "g_optim = torch.optim.Adam(\n",
+    "    generator.parameters(),\n",
+    "    lr=LEARNING_RATE,\n",
+    "    betas=(0.5, 0.99),\n",
+    ")\n",
+    "d_optim = torch.optim.Adam(\n",
+    "    discriminator.parameters(),\n",
+    "    lr=LEARNING_RATE,\n",
+    "    betas=(0.5, 0.99),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# losses\n",
+    "calculateDLoss, calculateGLoss = loss.calculateHingeLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize(SIZE),\n",
+    "    transforms.CenterCrop(SIZE),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5), inplace=True),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = Dataset(DATASET_PATH, transform)\n",
+    "loader = infinite_loader(\n",
+    "    DataLoader(\n",
+    "        dataset,\n",
+    "        batch_size=BATCH,\n",
+    "        shuffle=True,\n",
+    "        drop_last=True\n",
+    "    )\n",
+    ")\n"
    ]
   }
  ],
