--- a/pytorch_version/train.ipynb
+++ b/pytorch_version/train.ipynb
@@ -24,11 +24,13 @@
     "SIZE = 256\n",
     "BATCH = 16\n",
     "LEARNING_RATE = 1e-3\n",
-    "EPOCHS = 1e6\n",
+    "STEPS = 1e6\n",
     "NUM_BASIS = 6\n",
     "NOISE_DIM = 512\n",
     "BASE_CHANNELS = 16\n",
     "MAX_CHANNELS = 512\n",
+    "R1_PENALTY_COEFFICIENT = 10\n",
+    "ORTHOGONAL_REGULERIZATION_COEFFICIENT = 100\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')"
    ]
   },
@@ -112,7 +114,47 @@
     "        shuffle=True,\n",
     "        drop_last=True\n",
     "    )\n",
-    ")\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for step in range(STEPS):\n",
+    "\n",
+    "    real = next(loader).to(device)\n",
+    "    with torch.no_grad():\n",
+    "        fake = generator.sample(BATCH)\n",
+    "\n",
+    "    real_pred = discriminator(real)\n",
+    "    fake_pred = discriminator(fake)\n",
+    "\n",
+    "    # adverserial loss\n",
+    "    discriminator_loss = calculateDLoss(real_pred, fake_pred)\n",
+    "    discriminator.zero_grad()\n",
+    "    discriminator_loss.backward()\n",
+    "    d_optim.step()\n",
+    "\n",
+    "    # R1 penalty\n",
+    "    real.requires_grad = True\n",
+    "    real_pred = discriminator(real)\n",
+    "    r1 = calculateR1Loss(real_pred, real) * R1_PENALTY_COEFFICIENT\n",
+    "    discriminator.zero_grad()\n",
+    "    r1.backward()\n",
+    "    d_optim.step()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    fake = generator.sample(BATCH)\n",
+    "    fake_pred = discriminator(fake)\n",
+    "    generator_loss = calculateGLoss(fake_pred) + generator.regularizeUOrthogonal() * ORTHOGONAL_REGULERIZATION_COEFFICIENT\n",
+    "    generator.zero_grad()\n",
+    "    generator_loss.backward()\n",
+    "    g_optim.step()\n"
    ]
   }
  ],
