--- a/pytorch_version/train.ipynb
+++ b/pytorch_version/train.ipynb
@@ -146,15 +146,14 @@
     "    r1.backward()\n",
     "    d_optim.step()\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "    fake = generator.sample(BATCH)\n",
     "    fake_pred = discriminator(fake)\n",
     "    generator_loss = calculateGLoss(fake_pred) + generator.regularizeUOrthogonal() * ORTHOGONAL_REGULERIZATION_COEFFICIENT\n",
     "    generator.zero_grad()\n",
     "    generator_loss.backward()\n",
-    "    g_optim.step()\n"
+    "    g_optim.step()\n",
+    "\n",
+    "    print(f'Step: \\t {step}, D_loss:\\t{discriminator_loss.item()}, G_loss:\\t{generator_loss.item()}')"
    ]
   }
  ],
